on hover screenshots overlay and changed surf buddy screeshot

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
     </div>
     <div id="navbarExampleTransparentExample" class="navbar-menu">
       <div class="navbar-start">
-        <!-- <a class="navbar-item" href="#"><img src="images/tina_heart_logo.png"></a> -->
       </div>
       <div class="navbar-end">
         <div class="navbar-item">
@@ -57,13 +56,18 @@
   <section class="section reveal section-padding">
     <div class="container">
       <div class="columns is-variable bd-klmn-columns is-8">
-        <div class="column is-6">
+        <div class="column is-6 ">
+          <div class="image-container">
           <figure class="image is-4by3 image-border">
             <a href="https://frozen-reaches-89510.herokuapp.com/" target="_blank">
               <img src="./images/sugarfree_3.jpeg">
             </a>
           </figure>
         </div>
+          <!-- <div class="middle">
+              <a class="button is-primary is-medium is-outlined" href="https://frozen-reaches-89510.herokuapp.com/" target="_blank">Sugarfree Gallery</a>
+            </div> -->
+        </div> 
         <div class="column">
           <h1 class="title">Sugarfree Gallery</h1>
           <h2 class="subtitle">
@@ -75,7 +79,7 @@
             | Semantic-UI-React | JavaScript | HTMLS | CSS3 | Heroku</h1>
           <br>
             <div class="icon-size">
-              <i class="devicon-react-original colored"></i>
+              <i class="devicon-react-original-wordmark colored"></i>
               <i class="devicon-nodejs-plain colored"></i>
               <i class="devicon-mongodb-plain-wordmark colored"></i>
               <i class="devicon-amazonwebservices-original colored"></i>
@@ -83,7 +87,7 @@
               <img src="images/semantic-logo.png" style="width:47px" />
               <i class="devicon-html5-plain-wordmark colored"></i>
               <i class="devicon-css3-plain-wordmark colored"></i>
-              <i class="devicon-heroku-plain-wordmark colored"></i>
+              <i class="devicon-heroku-original-wordmark colored"></i>
             </div>
             <br>
             <!-- github and live site buttons -->
@@ -127,7 +131,7 @@
             <img src="images/semantic-logo.png" style="width:47px" />
             <i class="devicon-html5-plain-wordmark colored"></i>
             <i class="devicon-css3-plain-wordmark colored"></i>
-            <i class="devicon-heroku-plain-wordmark colored"></i>
+            <i class="devicon-heroku-original-wordmark colored"></i>
           </div>
           <br>
             <!-- github and live site buttons -->
@@ -147,11 +151,13 @@
             </div>
         </div>
         <div class="column is-6">
-          <figure class="image is-4by3 image-border">
-            <a href="https://stark-castle-27893.herokuapp.com/" target="_blank">
-              <img src="./images/surf_buddy.png">
-            </a>
-          </figure>
+          <div class="image-container">
+            <figure class="image is-4by3 image-border">
+              <a href="https://stark-castle-27893.herokuapp.com/" target="_blank">
+                <img src="./images/surf_buddy_new.png">
+              </a>
+            </figure>
+          </div>
         </div>
       </div>
     </div>
@@ -162,11 +168,13 @@
     <div class="container">
       <div class="columns is-variable bd-klmn-columns is-8">
         <div class="column is-6">
-          <figure class="image is-4by3 image-border">
-            <a href="https://enigmatic-ridge-61588.herokuapp.com/" target="_blank">
-              <img src="./images/campsite_findr_2.png">
-            </a>
-          </figure>
+          <div class="image-container">
+            <figure class="image is-4by3 image-border">
+              <a href="https://enigmatic-ridge-61588.herokuapp.com/" target="_blank">
+                <img src="./images/campsite_findr_2.png">
+              </a>
+            </figure>
+          </div>
         </div>
         <div class="column">
           <h1 class="title">Campsite Findr</h1>
@@ -186,7 +194,7 @@
             <i class="devicon-html5-plain-wordmark colored"></i>
             <i class="devicon-css3-plain-wordmark colored"></i>
             <i class="devicon-bootstrap-plain-wordmark colored"></i>
-            <i class="devicon-heroku-plain-wordmark colored"></i>
+            <i class="devicon-heroku-original-wordmark colored"></i>
           </div>
           <br>
             <!-- github and live site buttons -->
@@ -246,18 +254,19 @@
             </div>
         </div>
         <div class="column is-6">
-          <figure class="image is-4by3 image-border">
-            <a href="https://gebigoma.github.io/dreamrecall/" target="_blank">
-              <img src="./images/dream_recall.png">
-            </a>
-          </figure>
+          <div class="image-container">
+            <figure class="image is-4by3 image-border">
+              <a href="https://gebigoma.github.io/dreamrecall/" target="_blank">
+                <img src="./images/dream_recall.png">
+              </a>
+            </figure>
+          </div>
         </div>
       </div>
     </div>
   </section>
-
+  <div id="about"></div>
   <!-- Skills -->
-  <!-- <hr id="about"/> -->
   <section class="section reveal section-padding">
     <div class="container">
       <div class="column">
