--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
   <!-- import local stylesheet -->
   <link rel="stylesheet" href="main.css">
-  <!-- import favicon -->
+  <!-- import google font -->
+  <link href="https://fonts.googleapis.com/css?family=Nunito:400,600|Oxygen" rel="stylesheet">
 </head>
 
 <body>
@@ -32,9 +33,9 @@
       </div>
       <div class="navbar-end">
         <div class="navbar-item">
-          <a class="navbar-item" href="#portfolio-start">Portfolio</a>
-          <a class="navbar-item" href="#about">About</a>
-          <a class="navbar-item" href="#contact">Contact</a>
+          <a class="navbar-item item-one" href="#portfolio-start">Portfolio</a>
+          <a class="navbar-item item-two" href="#about">About</a>
+          <a class="navbar-item item-three" href="#contact">Contact</a>
         </div>
       </div>
     </div>
@@ -44,7 +45,7 @@
   <section class="hero is-large hero-image">
     <div class="hero-body">
       <div class="container">
-        <h1 class="title">Tina Park</h1>
+        <h1 class="title google-font">Tina Park</h1>
         <h2 class="subtitle">
           A Full-Stack Web Developer with a deep appreciation for the User Experience.</h2>
       </div>
@@ -56,17 +57,14 @@
   <section class="section reveal section-padding">
     <div class="container">
       <div class="columns is-variable bd-klmn-columns is-8">
-        <div class="column is-6 ">
+        <div class="column is-6">
           <div class="image-container">
-          <figure class="image is-4by3 image-border">
-            <a href="https://frozen-reaches-89510.herokuapp.com/" target="_blank">
+            <figure class="image is-4by3 image-border">
+              <a href="https://frozen-reaches-89510.herokuapp.com/" target="_blank">
               <img src="./images/sugarfree_3.jpeg">
-            </a>
-          </figure>
-        </div>
-          <!-- <div class="middle">
-              <a class="button is-primary is-medium is-outlined" href="https://frozen-reaches-89510.herokuapp.com/" target="_blank">Sugarfree Gallery</a>
-            </div> -->
+              </a>
+            </figure>
+          </div>
         </div> 
         <div class="column">
           <h1 class="title">Sugarfree Gallery</h1>
@@ -84,7 +82,7 @@
               <i class="devicon-mongodb-plain-wordmark colored"></i>
               <i class="devicon-amazonwebservices-original colored"></i>
               <i class="devicon-javascript-plain colored"></i>
-              <img src="images/semantic-logo.png" style="width:47px" />
+              <img src="images/semantic-logo.png" style="width:43px" />
               <i class="devicon-html5-plain-wordmark colored"></i>
               <i class="devicon-css3-plain-wordmark colored"></i>
               <i class="devicon-heroku-original-wordmark colored"></i>
@@ -128,7 +126,7 @@
             <i class="devicon-javascript-plain colored"></i>
             <i class="devicon-nodejs-plain colored"></i>
             <i class="devicon-mongodb-plain-wordmark colored"></i>
-            <img src="images/semantic-logo.png" style="width:47px" />
+            <img src="images/semantic-logo.png" style="width:43px" />
             <i class="devicon-html5-plain-wordmark colored"></i>
             <i class="devicon-css3-plain-wordmark colored"></i>
             <i class="devicon-heroku-original-wordmark colored"></i>
@@ -341,7 +339,7 @@
   <!-- FOOTER -->
   <footer class="footer" id="contact">
     <div class="content has-text-centered">
-        <h1 class="footer-style" style="font-size: 170%; font-weight: 700">
+        <h1 class="footer-style" style="font-size: 170%; font-weight: 600">
           <!-- <i class="fas fa-envelope"></i>  -->contact me: 
           <a class="footer-style" href="mailto:tinasunpark@gmail.com?" target="_top">tinasunpark@gmail.com</a></h1>
             <div class="column no-padding">
