added fadein for main header

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   <section class="hero is-large hero-image">
     <div class="hero-body">
       <div class="container">
-        <h1 class="title google-font">Tina Park</h1>
-        <h2 class="subtitle">
+        <h1 class="title google-font fade">Tina Park</h1>
+        <h2 class="subtitle fade">
           A Full-Stack Web Developer with a deep appreciation for the User Experience.</h2>
       </div>
     </div>
