--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html class="has-navbar-fixed-top">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123564407-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-123564407-1');
+</script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -42,10 +51,10 @@
   </nav>
 
   <!-- HERO -->
-  <section class="hero is-large hero-image">
+  <section class="hero is-large hero-image fade">
     <div class="hero-body">
       <div class="container">
-        <h1 class="title google-font fade">Tina Park</h1>
+        <h1 class="title google-font">Tina Park</h1>
         <h2 class="subtitle fade">
           A Full-Stack Web Developer with a deep appreciation for the User Experience.</h2>
       </div>
