added version cdn for scroll reveal and fixed flickering

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   <link rel="stylesheet" href="main.css">
   <!-- import google font -->
   <link href="https://fonts.googleapis.com/css?family=Nunito:400,600|Oxygen" rel="stylesheet">
+    <!-- SCROLL REVEAL -->
+    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+
 </head>
 
 <body>
@@ -63,7 +66,7 @@
   </section>
 
   <!-- SUGARFREE GALLERY -->
-  <section class="section reveal section-padding">
+  <section class="section reveal load-hidden section-padding">
     <div class="container">
       <div class="columns is-variable bd-klmn-columns is-8">
         <div class="column is-6">
@@ -118,7 +121,7 @@
   </section>
 
   <!-- SURF BUDDY -->
-  <section class="section reveal section-padding">
+  <section class="section reveal load-hidden section-padding">
     <div class="container">
       <div class="columns is-variable bd-klmn-columns is-8">
         <div class="column">
@@ -171,7 +174,7 @@
   </section>
 
   <!-- CAMPSITE FINDR -->
-  <section class="section reveal section-padding">
+  <section class="section reveal load-hidden section-padding">
     <div class="container">
       <div class="columns is-variable bd-klmn-columns is-8">
         <div class="column is-6">
@@ -226,7 +229,7 @@
   </section>
 
   <!-- DREAM RECALL -->
-  <section class="section reveal section-padding">
+  <section class="section reveal load-hidden section-padding">
     <div class="container">
       <div class="columns is-variable bd-klmn-columns is-8">
         <div class="column">
@@ -274,7 +277,7 @@
   </section>
   <div id="about"></div>
   <!-- Skills -->
-  <section class="section reveal section-padding">
+  <section class="section reveal load-hidden section-padding">
     <div class="container">
       <div class="column">
         <h1 class="title">SKILLS:</h1>
@@ -285,7 +288,7 @@
   <hr/>
 
   <!-- ABOUT ME -->
-  <section class="section reveal section-padding">
+  <section class="section reveal load-hidden section-padding">
       <div class="container">
         <div class="column">
           <h1 class="title">ABOUT ME:</h1>
@@ -320,8 +323,8 @@
   <!-- IMPORT SCRIPTS -->
   <!-- GITHUB BUTTON -->
   <script async defer src="https://buttons.github.io/buttons.js"></script>
-  <!-- SCROLL REVEAL -->
-  <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+  <!-- SCROLL REVEAL
+  <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script> -->
   <!-- FONT AWESOME -->
   <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
   <!-- JQUERY -->
