added tooltip with login instructions for sugarfree gallery

--- a/index.html
+++ b/index.html
@@ -104,15 +104,15 @@
               <div>
                 <a class="button is-primary" href="https://github.com/gebigoma/sugarfree-gallery" target="_blank">
                   <span class="icon">
-                    <i class="fab fa-github"></i>
-                  </span>
+                    <i class="fab fa-github"></i></span>
                   <span>See code</span>
                 </a>
-                <a class="button is-primary" href="https://frozen-reaches-89510.herokuapp.com/" target="_blank">
+                <a class="button is-primary tooltip" href="https://frozen-reaches-89510.herokuapp.com/" target="_blank">
                   <span class="icon">
                     <i class="fas fa-desktop"></i>
                   </span>
                   <span>Go to site</span>
+                  <span class="tooltiptext">To view page use following to login: <br>Login: sugarfree@mail.com <br>Password: sugarfree</span>
                 </a>
               </div>
         </div>
